--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5,7 +5,7 @@ body {
 
 .sidebar {
     height: 100vh;
-    background : linear-gradient(rgba(0,0,0,.7) , rgba(0,0,0,.9)) , url(images/bg1.jpg);
+    background : linear-gradient(rgba(0,0,0,.7) , rgba(0,0,0,.9)) , url(../../images/bg1.jpg);
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
@@ -37,4 +37,70 @@ body {
     border-radius: 7px;
     box-shadow: 2px 5px 20px #111;
     transform:translateY(-1px);
+}
+
+.search-input {
+    background: transparent;
+    border: none;
+    border-radius: 0;
+    border-bottom: 2px solid #999;
+    transition: all .4s;
+}
+
+.search-input:focus {
+    background: transparent;
+    box-shadow: none;
+    border-bottom: 2px solid #dc3545;
+}
+
+.search-button {
+    border-radius: 50%;
+    padding: 10px 16px;
+    transition: all .4s;
+}
+
+.search-button:hover {
+    background-color: #EEE;
+    transform: translateY(-1px);
+}
+
+.icon-parent {
+    position: relative;
+}
+
+.icon-bullet::after {
+    content: "";
+    position: absolute;
+    top: 7px;
+    left: 15px;
+    width: 12px;
+    height: 12px;
+    background-color: #dc3545;
+    border-radius: 50%;
+}
+
+@media (max-width : 768px) {
+    .sidebar {
+        position: static;
+        height: auto;
+    }
+
+    .top-navbar {
+        position: static;
+    }
+}
+
+.row1 {
+    margin-left: 20px;
+}
+.card-common {
+    box-shadow: 1px 2px 5px #999;
+    transition: all .4s;
+   
+  
+}
+
+.card-common:hover {
+    box-shadow: 2px 3px 15px #999;
+    transform: translateY(-1px);
 }
